# lidar_detection_pipeline

./: .gitignore  CMakeLists.txt  README.md  readme.md
config/: pipeline.json  pipeline_astar.json
doc/: compare.md
include/lidar_core/core/: async_pipeline.h  node.h  packet.h  pipeline.h  planning_types.hpp  thread_safe_queue.h  types.hpp
include/lidar_core/nodes/: i_attribute_node.h  i_control_node.h  i_infer_node.h  i_output_node.h  i_planner_node.h  i_source_node.h  i_tracker_node.h
src/: app.cpp  main.cpp
src/core/: async_pipeline.cpp  detector.cpp  lidar-postprocess.cu  node.cpp  pipeline_manager.cpp
src/nodes/attribute/: attribute_node.cpp  attribute_node.h
src/nodes/control/: pid_controller.cpp  pid_controller.h
src/nodes/infer/: detection_infer_node.cpp  detection_infer_node.h  detector.hpp  engine.cpp  engine.hpp  lidar-backbone.cu
src/nodes/infer/common/: tensorrt.cpp
src/nodes/output/: bev_visualizer_node.cpp  bev_visualizer_node.h  file_output_node.cpp  file_output_node.h  file_writer.cpp  output.cpp  output.hpp  trajectory_visualizer_node.cpp  trajectory_visualizer_node.h
src/nodes/planner/: astar_planner.cpp  astar_planner.h  potential_field_planner.cpp  potential_field_planner.h
src/nodes/registry/: node_factory.cpp  node_factory.h  node_registry.cpp
src/nodes/source/: bin_reader.cpp  bin_source_node.cpp  bin_source_node.h  reader.cpp  reader.hpp
src/nodes/track/: ocsort_adapter.cpp  ocsort_adapter.h  tracker_node.cpp  tracker_node.h
src/pipeline/: bev_visualizer.cpp  bev_visualizer.hpp  bin_reader.hpp  callback_output.cpp  callback_output.hpp  engine.cpp  engine.hpp  file_writer.hpp  output.cpp  output.hpp  reader.cpp  reader.hpp  types.hpp  velodyne_reader.cpp  velodyne_reader.hpp
